--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -53,7 +53,7 @@ $pz-dark-blue-palette: (
   --mdc-outlined-button-label-text-tracking: normal;
   --mat-dialog-headline-padding: 0 0 0 12px;
   --mat-dialog-actions-padding: 0 12px 0 12px;
-  --mat-dialog-with-actions-content-padding: 24px var($dialog-content-padding-y);
+  --mat-dialog-with-actions-content-padding: #{$dialog-content-padding-y} 10px;
   --okr-topbar-background-color: #1e5a96;
   --okr-banner-background-color: #dcedf9;
 }
